--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fuxi",
+  "name": "chongfuxi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,12 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "css-loader": "^5.0.2",
+    "typeface-roboto": "^1.1.13",
+    "vue": "^2.6.12",
+    "vue-router": "^3.2.0",
+    "vue-style-loader": "^4.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.11",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
