--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typeface-roboto": "^1.1.13",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
-    "vue-style-loader": "^4.1.2"
+    "vue-style-loader": "^4.1.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
