--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "css-loader": "^5.0.2",
+    "firebase": "^8.3.1",
+    "swiper": "^6.5.0",
     "typeface-roboto": "^1.1.13",
     "vue": "^2.6.12",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-glide-js": "^1.3.14",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.2.0",
     "vue-style-loader": "^4.1.2",
     "vuex": "^3.6.2"
