--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.21.1",
     "bootstrap-icons": "^1.4.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "css-loader": "^5.0.2",
+    "express": "^4.17.1",
     "firebase": "^8.3.1",
+    "firebase-admin": "^9.7.0",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typeface-roboto": "^1.1.13",
