--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
     "axios": "^0.21.1",
+    "bfj": "^6.1.2",
     "bootstrap-icons": "^1.4.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -18,6 +19,8 @@
     "express": "^4.17.1",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.7.0",
+    "fuse.js": "^6.4.6",
+    "JSONStream": "^1.3.5",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typeface-roboto": "^1.1.13",
