--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "fuse.js": "^6.4.6",
     "JSONStream": "^1.3.5",
     "postcss": "^7",
+    "swiper": "^5.4.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typeface-roboto": "^1.1.13",
     "vue": "^2.6.12",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-glide-js": "^1.3.14",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.2.0",
