--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "swiper": "^5.4.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typeface-roboto": "^1.1.13",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.12",
     "vue-awesome-swiper": "^4.1.1",
     "vue-glide-js": "^1.3.14",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.2.0",
     "vue-style-loader": "^4.1.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xstate": "^4.19.1",
+    "xstate-vue2": "^0.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
