--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "firebase-admin": "^9.7.0",
     "fuse.js": "^6.4.6",
     "JSONStream": "^1.3.5",
+    "pinyin-tone": "^2.0.6",
+    "pinyin-utils": "^2.31.0",
     "postcss": "^7",
+    "string-similarity": "^4.0.4",
     "swiper": "^5.4.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typeface-roboto": "^1.1.13",
@@ -31,6 +34,7 @@
     "vue-glide-js": "^1.3.14",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^3.2.0",
+    "vue-scrollactive": "^0.9.3",
     "vue-style-loader": "^4.1.2",
     "vuex": "^3.6.2",
     "xstate": "^4.19.1",
